Make chunking optional, block indices options, cleanup code